# hyprwhspr

./: prompt.txt  pyproject.toml  requirements.txt  roadmap.md  todo.md
config/waybar/: hyprwhspr-module.jsonc  hyprwhspr-style.css
lib/hyprwhspr/: __init__.py  __main__.py  audio_capture.py  audio_manager.py  backend_installer.py  cli.py  cli_commands.py  config_manager.py  credential_manager.py  global_shortcuts.py  main.py  text_injector.py  whisper_manager.py
