[project]
name = "hyprwhspr"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "evdev>=1.6.0",
    "numpy>=1.21.0",
    "psutil>=5.8.0",
    "pyperclip>=1.8.2",
    "pywhispercpp==1.4.0",
    "requests>=2.25.0",
    "rich>=13.0.0",
    "scipy>=1.10.0",
    "sounddevice>=0.4.6",
]

[project.scripts]
hyprwhspr = "hyprwhspr.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib/hyprwhspr"]
